--- a/WebContent/SimpleForm.html
+++ b/WebContent/SimpleForm.html
@@ -6,7 +6,23 @@
 </head>
 <body>
 	<form method="post" action="XmlServlet">
-		<input name="userName" />
+		Username: <input name="userName" />
+		Full Name: <input name="fullName" />
+		<br>
+		Profession:
+		<input type="radio" name="prof" value="Developer">Developer
+		<input type="radio" name="prof" value="Architect">Architect
+		<br>
+		Location:
+		<select name="location" multiple>
+			<option value="North America">North America</option>
+			<option value="South America">South America</option>
+			<option value="Africa">Africa</option>
+			<option value="Asia">Asia</option>
+			<option value="Europe">Europe</option>
+			<option value="Oceania">Oceania</option>			
+		</select>
+		<br>
 		<input type="submit" />
 	</form>
 </body>
