--- a/WebContent/SimpleForm.html
+++ b/WebContent/SimpleForm.html
@@ -14,7 +14,7 @@
 		<input type="radio" name="prof" value="Architect">Architect
 		<br>
 		Location:
-		<select name="location" multiple>
+		<select name="location" multiple size ="3">
 			<option value="North America">North America</option>
 			<option value="South America">South America</option>
 			<option value="Africa">Africa</option>
